modified:   anag_stats_/Data review/preliminary_qc.ipynb

--- a/anag_stats_/Data review/preliminary_qc.ipynb
+++ b/anag_stats_/Data review/preliminary_qc.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "# update to the file name to be read\n",
     "# the header is the row that has the collumn names (zero indexed, and verify which is the header row before running)\n",
     "# the sep is the seperator of the data\n",
-    "df = pd.read_csv(\"anagram_rating_pilot_filtered_20240808_1327.csv\", header=0, sep=',')"
+    "df = pd.read_csv(\"anagram_rating_pilot_filtered_20240808_1713.csv\", header=0, sep=',')"
    ]
   },
   {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,14 @@
     "anagram_stat = anagram_stat[cols]\n",
     "\n",
     "# Save out the dataframe to a csv file but remove only the response column (since it is not needed)\n",
-    "anagram_stat.drop(['response'], axis=1).to_csv('anagram_stat.csv', index=False)"
+    "# Make a timestamp for the file name so we know when the this notebook was run\n",
+    "from datetime import datetime\n",
+    "now = datetime.now()\n",
+    "dt_string = now.strftime(\"%Y%m%d_%H%M\")\n",
+    "timestamped = 'anagram_statistics' + dt_string + '.csv'\n",
+    "df.to_csv(timestamped, index=False)\n",
+    "# okay nowe we can save the anagram_stat dataframe to a csv file\n",
+    "anagram_stat.drop(['response'], axis=1).to_csv(timestamped, index=False)"
    ]
   }
  ],
