Cleaning. 	modified:   anag_stats_/.DS_Store 	modified:   anag_stats_/Data review/preliminary_qc.ipynb

--- a/anag_stats_/Data review/preliminary_qc.ipynb
+++ b/anag_stats_/Data review/preliminary_qc.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Preliminary exploratory notebook\n",
+    "# Preliminary exploratory notebook\n",
     "\n",
     "From the pilot I want to look through the data thus far and see if there are particular anagrams, responding, or patterns that we need to address before collecting more. \n",
     "\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,16 +122,50 @@
     "cols.insert(id_index + 1, cols.pop(cols.index('non_match_count')))\n",
     "anagram_stat = anagram_stat[cols]\n",
     "\n",
-    "# Save out the dataframe to a csv file but remove only the response column (since it is not needed)\n",
+    "# ------ Below is the save out codes ------\n",
     "# Make a timestamp for the file name so we know when the this notebook was run\n",
-    "from datetime import datetime\n",
-    "now = datetime.now()\n",
-    "dt_string = now.strftime(\"%Y%m%d_%H%M\")\n",
-    "timestamped = 'anagram_statistics' + dt_string + '.csv'\n",
-    "df.to_csv(timestamped, index=False)\n",
-    "# okay nowe we can save the anagram_stat dataframe to a csv file\n",
-    "anagram_stat.drop(['response'], axis=1).to_csv(timestamped, index=False)"
+    "# from datetime import datetime\n",
+    "# now = datetime.now()\n",
+    "# dt_string = now.strftime(\"%Y%m%d_%H%M\")\n",
+    "# timestamped = 'anagram_statistics' + dt_string + '.csv'\n",
+    "# df.to_csv(timestamped, index=False)\n",
+    "# # okay nowe we can save the anagram_stat dataframe to a csv file\n",
+    "# anagram_stat.drop(['response'], axis=1).to_csv(timestamped, index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preproc of the responses\n",
+    "\n",
+    "- Remove spaces\n",
+    "- Lower case everything\n",
+    "- Remove non letter characters "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checking the response\n",
+    " \n",
+    "- String length match \n",
+    "- Create list and sort list and test for equality of target vs response\n",
+    "- If all above is true then test if the response is a real english word. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
