New Stats! Now with QC respnses that check the string lengths and validity of the responses.
	new file:   anag_stats_/Data review/anagram_statistics20240809_1325.csv
	modified:   anag_stats_/Data review/preliminary_qc.ipynb

--- a/anag_stats_/Data review/preliminary_qc.ipynb
+++ b/anag_stats_/Data review/preliminary_qc.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,23 +120,8 @@
     "# Add to the df next to the id column\n",
     "cols = anagram_stat.columns.tolist()\n",
     "cols.insert(id_index + 1, cols.pop(cols.index('non_match_count')))\n",
-    "anagram_stat = anagram_stat[cols]\n",
-    "\n",
-    "# ------ Below is the save out codes ------\n",
-    "# Make a timestamp for the file name so we know when the this notebook was run\n",
-    "# from datetime import datetime\n",
-    "# now = datetime.now()\n",
-    "# dt_string = now.strftime(\"%Y%m%d_%H%M\")\n",
-    "# timestamped = 'anagram_statistics' + dt_string + '.csv'\n",
-    "# df.to_csv(timestamped, index=False)\n",
-    "# # okay nowe we can save the anagram_stat dataframe to a csv file\n",
-    "# anagram_stat.drop(['response'], axis=1).to_csv(timestamped, index=False)"
+    "anagram_stat = anagram_stat[cols]"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -147,6 +132,32 @@
     "- Remove spaces\n",
     "- Lower case everything\n",
     "- Remove non letter characters "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_49418/1874314209.py:3: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  responses = responses.applymap(lambda x: x.replace(\" \", \"\") if isinstance(x, str) else x) # remove spaces\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_49418/1874314209.py:4: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  responses = responses.applymap(lambda x: x.lower() if isinstance(x, str) else x) # make lower case\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_49418/1874314209.py:5: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  responses = responses.applymap(lambda x: ''.join(filter(str.isalpha, x)) if isinstance(x, str) else x) # remove non alphabetical characters\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For the responses we are going to process them to remove spaces, make all lower case, and remove non alphabetical characters\n",
+    "responses = anagram_stat.filter(['response1', 'response2', 'response3', 'response4', 'response5', 'response6', 'response7', 'response8', 'response9', 'response10'])\n",
+    "responses = responses.applymap(lambda x: x.replace(\" \", \"\") if isinstance(x, str) else x) # remove spaces\n",
+    "responses = responses.applymap(lambda x: x.lower() if isinstance(x, str) else x) # make lower case\n",
+    "responses = responses.applymap(lambda x: ''.join(filter(str.isalpha, x)) if isinstance(x, str) else x) # remove non alphabetical characters"
    ]
   },
   {
@@ -162,10 +173,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_49418/2523656421.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  string_length = responses.applymap(lambda x: len(x) if isinstance(x, str) else 0)\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_49418/2523656421.py:15: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  characters = responses.applymap(lambda x: set(x) if isinstance(x, str) else x)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1. Now for the responses, what the string legnth is for each and then compare to the correct answer string length. If the string length is different then we know the response is invalid.\n",
+    "string_length = responses.applymap(lambda x: len(x) if isinstance(x, str) else 0)\n",
+    "string_length['correct'] = anagram_stat['correct'].apply(lambda x: len(x)) # add the correct answer string length to the dataframe\n",
+    "string_length['valid'] = string_length.apply(lambda row: sum(row[:-1] == row['correct']), axis=1) # compare the string length of the response to the correct answer sum the valid responses\n",
+    "# In a QC df of responses, we drop the responses that are invalid based on string length\n",
+    "# make a validate response function\n",
+    "def validate_response_length(row):\n",
+    "    correct_length = string_length['correct'][row.name]\n",
+    "    return row.apply(lambda x: x if isinstance(x, str) and len(x) == correct_length else '')\n",
+    "\n",
+    "qc_responses = responses.apply(validate_response_length, axis=1)\n",
+    "\n",
+    "\n",
+    "#2. Then we compare the characters used in the response to the correct answer, if there are different characters in the response (irrespective of order) then we know the response is invalid.\n",
+    "characters = responses.applymap(lambda x: set(x) if isinstance(x, str) else x)\n",
+    "characters['correct'] = anagram_stat['correct'].apply(lambda x: set(x)) # add the correct answer characters to the dataframe\n",
+    "characters['valid'] = characters.apply(lambda row: sum(row[:-1] == row['correct']), axis=1) # compare the characters used in the response to the correct answer sum the valid responses\n",
+    "\n",
+    "# We apply the same method to modify the qc_responses dataframe to only include valid responses based on characters used\n",
+    "def validate_response_character(row):\n",
+    "    correct_characters = characters['correct'][row.name]\n",
+    "    return row.apply(lambda x: x if isinstance(x, str) and set(x) == correct_characters else '')\n",
+    "qc_responses = qc_responses.apply(validate_response_character, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package words to\n",
+      "[nltk_data]     /Users/lyndefolsom/nltk_data...\n",
+      "[nltk_data]   Package words is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3. Finally, if the response is the same length and uses the same characters, we check if that word is a real english word. If it is not a real english word then we know the response is invalid.\n",
+    "# We can use the nltk library to check if a word is a real english word.\n",
+    "import nltk\n",
+    "nltk.download('words')\n",
+    "from nltk.corpus import words\n",
+    "valid_words = set(words.words()) #make a var with all the valid words\n",
+    "# We can now use the valid_words set to check if a response is a valid english word\n",
+    "def validate_response_word(row):\n",
+    "    return row.apply(lambda x: x if isinstance(x, str) and x in valid_words else '')\n",
+    "qc_responses = qc_responses.apply(validate_response_word, axis=1)\n",
+    "# Once we know if a response is valid or invalid we can then calculate the accuracy of the response and add this to the anagram_stat dataframe as a new column."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With a QC response fame Now\n",
+    "Lets add to our stats df an accuracy collumn which is the sum of the number of qc'd responses for that anagram id. It'll be a col next to ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Count the number of valid responses in the qc_responses dataframe and add this to the anagram_stat dataframe as a new column that is matched with the id. \n",
+    "anagram_stat['valid_count'] = qc_responses.apply(lambda row: row.apply(lambda x: x != '').sum(), axis=1)\n",
+    "# Add to the df next to the id column\n",
+    "cols = anagram_stat.columns.tolist()\n",
+    "cols.insert(id_index + 1, cols.pop(cols.index('valid_count')))\n",
+    "anagram_stat = anagram_stat[cols]\n",
+    "\n",
+    "# Compute the ratio of valid responses to the total number of responses, ie. valid_count / response_count\n",
+    "anagram_stat['valid_ratio'] = anagram_stat['valid_count'] / anagram_stat['response_count']\n",
+    "# Add to the df next to the id column\n",
+    "cols = anagram_stat.columns.tolist()\n",
+    "cols.insert(id_index + 1, cols.pop(cols.index('valid_ratio')))\n",
+    "anagram_stat = anagram_stat[cols]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The chunk below is for saving out\n",
+    "Always make sure you recomment this chunk when you go to push the repo!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from datetime import datetime\n",
+    "# now = datetime.now()\n",
+    "# dt_string = now.strftime(\"%Y%m%d_%H%M\")\n",
+    "# timestamped = 'anagram_statistics' + dt_string + '.csv'\n",
+    "# df.to_csv(timestamped, index=False)\n",
+    "# anagram_stat.drop(['response'], axis=1).to_csv(timestamped, index=False)"
+   ]
   }
  ],
  "metadata": {
