Updated the dictionary files for validating responses. 	modified:   .DS_Store 	modified:   anag_stats_/.DS_Store 	modified:   anag_stats_/Data review/preliminary_qc.ipynb 	new file:   anag_stats_/Data review/words_dictionary.json

--- a/anag_stats_/Data review/preliminary_qc.ipynb
+++ b/anag_stats_/Data review/preliminary_qc.ipynb
@@ -143,11 +143,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_49418/1874314209.py:3: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_51948/259965843.py:3: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  responses = responses.applymap(lambda x: x.replace(\" \", \"\") if isinstance(x, str) else x) # remove spaces\n",
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_49418/1874314209.py:4: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_51948/259965843.py:4: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  responses = responses.applymap(lambda x: x.lower() if isinstance(x, str) else x) # make lower case\n",
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_49418/1874314209.py:5: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_51948/259965843.py:5: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  responses = responses.applymap(lambda x: ''.join(filter(str.isalpha, x)) if isinstance(x, str) else x) # remove non alphabetical characters\n"
      ]
     }
@@ -157,7 +157,9 @@
     "responses = anagram_stat.filter(['response1', 'response2', 'response3', 'response4', 'response5', 'response6', 'response7', 'response8', 'response9', 'response10'])\n",
     "responses = responses.applymap(lambda x: x.replace(\" \", \"\") if isinstance(x, str) else x) # remove spaces\n",
     "responses = responses.applymap(lambda x: x.lower() if isinstance(x, str) else x) # make lower case\n",
-    "responses = responses.applymap(lambda x: ''.join(filter(str.isalpha, x)) if isinstance(x, str) else x) # remove non alphabetical characters"
+    "responses = responses.applymap(lambda x: ''.join(filter(str.isalpha, x)) if isinstance(x, str) else x) # remove non alphabetical characters\n",
+    "# Add the ID back to the responses\n",
+    "responses['id'] = anagram_stat['id']\n"
    ]
   },
   {
@@ -173,17 +175,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_49418/2523656421.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  string_length = responses.applymap(lambda x: len(x) if isinstance(x, str) else 0)\n",
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_49418/2523656421.py:15: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  characters = responses.applymap(lambda x: set(x) if isinstance(x, str) else x)\n"
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_51948/170734273.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  string_length = responses.applymap(lambda x: len(x) if isinstance(x, str) else 0)\n"
      ]
     }
    ],
@@ -198,42 +198,67 @@
     "    correct_length = string_length['correct'][row.name]\n",
     "    return row.apply(lambda x: x if isinstance(x, str) and len(x) == correct_length else '')\n",
     "\n",
-    "qc_responses = responses.apply(validate_response_length, axis=1)\n",
-    "\n",
-    "\n",
-    "#2. Then we compare the characters used in the response to the correct answer, if there are different characters in the response (irrespective of order) then we know the response is invalid.\n",
-    "characters = responses.applymap(lambda x: set(x) if isinstance(x, str) else x)\n",
-    "characters['correct'] = anagram_stat['correct'].apply(lambda x: set(x)) # add the correct answer characters to the dataframe\n",
-    "characters['valid'] = characters.apply(lambda row: sum(row[:-1] == row['correct']), axis=1) # compare the characters used in the response to the correct answer sum the valid responses\n",
-    "\n",
-    "# We apply the same method to modify the qc_responses dataframe to only include valid responses based on characters used\n",
-    "def validate_response_character(row):\n",
-    "    correct_characters = characters['correct'][row.name]\n",
-    "    return row.apply(lambda x: x if isinstance(x, str) and set(x) == correct_characters else '')\n",
-    "qc_responses = qc_responses.apply(validate_response_character, axis=1)"
+    "qc_responses = responses.apply(validate_response_length, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package words to\n",
-      "[nltk_data]     /Users/lyndefolsom/nltk_data...\n",
-      "[nltk_data]   Package words is already up-to-date!\n"
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_51948/1553544211.py:4: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  characters = responses.applymap(lambda x: Counter(x) if isinstance(x, str) else x)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "#2. Then we compare the characters used in the response to the correct answer, if there are different characters in the response (irrespective of order) then we know the response is invalid.\n",
+    "characters = responses.applymap(lambda x: Counter(x) if isinstance(x, str) else x)\n",
+    "characters['correct'] = anagram_stat['correct'].apply(lambda x: Counter(x))\n",
+    "characters['valid'] = characters.apply(lambda row: sum(row[:-1] == row['correct']), axis=1)\n",
+    "\n",
+    "# We apply the same method to modify the qc_responses dataframe to only include valid responses based on characters used\n",
+    "def validate_response_character(row):\n",
+    "    correct_characters = characters['correct'][row.name]\n",
+    "    return row.apply(lambda x: x if isinstance(x, str) and Counter(x) == correct_characters else '')\n",
+    "\n",
+    "qc_responses = qc_responses.apply(validate_response_character, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "The 'enchant' C library was not found and maybe needs to be installed.\nSee  https://pyenchant.github.io/pyenchant/install.html\nfor details\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 6\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#3. Finally, if the response is the same length and uses the same characters, we check if that word is a real english word. If it is not a real english word then we know the response is invalid.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# We can use the nltk library to check if a word is a real english word.\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#import nltk\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#nltk.download('words')\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#from nltk.corpus import words\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01menchant\u001b[39;00m \n\u001b[1;32m      7\u001b[0m words \u001b[38;5;241m=\u001b[39m enchant\u001b[38;5;241m.\u001b[39mDict(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124men_US\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m valid_words \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(words\u001b[38;5;241m.\u001b[39mwords()) \u001b[38;5;66;03m#make a var with all the valid words\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/enchant/__init__.py:81\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[1;32m     80\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 81\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01menchant\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _enchant \u001b[38;5;28;01mas\u001b[39;00m _e\n\u001b[1;32m     82\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n\u001b[1;32m     83\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39menviron\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPYENCHANT_IGNORE_MISSING_LIB\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/enchant/_enchant.py:157\u001b[0m\n\u001b[1;32m    149\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m enchant_lib_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    150\u001b[0m     msg \u001b[38;5;241m=\u001b[39m textwrap\u001b[38;5;241m.\u001b[39mdedent(\n\u001b[1;32m    151\u001b[0m \u001b[38;5;250m        \u001b[39m\u001b[38;5;124;03m\"\"\"\\\u001b[39;00m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;124;03m        The 'enchant' C library was not found and maybe needs to be installed.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    155\u001b[0m \u001b[38;5;124;03m        \"\"\"\u001b[39;00m\n\u001b[1;32m    156\u001b[0m     )\n\u001b[0;32m--> 157\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(msg)\n\u001b[1;32m    160\u001b[0m find_message(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mloading library \u001b[39m\u001b[38;5;124m\"\u001b[39m, enchant_lib_path)\n\u001b[1;32m    161\u001b[0m e \u001b[38;5;241m=\u001b[39m ctypes\u001b[38;5;241m.\u001b[39mcdll\u001b[38;5;241m.\u001b[39mLoadLibrary(enchant_lib_path)\n",
+      "\u001b[0;31mImportError\u001b[0m: The 'enchant' C library was not found and maybe needs to be installed.\nSee  https://pyenchant.github.io/pyenchant/install.html\nfor details\n"
      ]
     }
    ],
    "source": [
     "#3. Finally, if the response is the same length and uses the same characters, we check if that word is a real english word. If it is not a real english word then we know the response is invalid.\n",
     "# We can use the nltk library to check if a word is a real english word.\n",
-    "import nltk\n",
-    "nltk.download('words')\n",
-    "from nltk.corpus import words\n",
+    "#import nltk\n",
+    "#nltk.download('words')\n",
+    "#from nltk.corpus import words\n",
+    "import enchant \n",
+    "words = enchant.Dict(\"en_US\")\n",
+    "\n",
     "valid_words = set(words.words()) #make a var with all the valid words\n",
     "# We can now use the valid_words set to check if a response is a valid english word\n",
     "def validate_response_word(row):\n",
@@ -246,13 +271,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Okay I'm worried about this dictionary that I imported may not contain a few words so I asked copilot to make a lil checker. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_to_check = \"carpet\"\n",
+    "is_valid = word_to_check in valid_words\n",
+    "print(is_valid)  # This will print True if the word is valid, otherwise False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### With a QC response fame Now\n",
     "Lets add to our stats df an accuracy collumn which is the sum of the number of qc'd responses for that anagram id. It'll be a col next to ID"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,9 +339,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (miniconda3)",
+   "display_name": "base",
    "language": "python",
-   "name": "miniconda3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
