modified:   anag_stats_/Data review/preliminary_qc.ipynb

--- a/anag_stats_/Data review/preliminary_qc.ipynb
+++ b/anag_stats_/Data review/preliminary_qc.ipynb
@@ -143,11 +143,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_51948/259965843.py:3: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_57014/259965843.py:3: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  responses = responses.applymap(lambda x: x.replace(\" \", \"\") if isinstance(x, str) else x) # remove spaces\n",
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_51948/259965843.py:4: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_57014/259965843.py:4: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  responses = responses.applymap(lambda x: x.lower() if isinstance(x, str) else x) # make lower case\n",
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_51948/259965843.py:5: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_57014/259965843.py:5: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  responses = responses.applymap(lambda x: ''.join(filter(str.isalpha, x)) if isinstance(x, str) else x) # remove non alphabetical characters\n"
      ]
     }
@@ -182,7 +182,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_51948/170734273.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_57014/170734273.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  string_length = responses.applymap(lambda x: len(x) if isinstance(x, str) else 0)\n"
      ]
     }
@@ -210,7 +210,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_51948/1553544211.py:4: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_57014/1553544211.py:4: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  characters = responses.applymap(lambda x: Counter(x) if isinstance(x, str) else x)\n"
      ]
     }
@@ -233,33 +233,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "The 'enchant' C library was not found and maybe needs to be installed.\nSee  https://pyenchant.github.io/pyenchant/install.html\nfor details\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 6\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#3. Finally, if the response is the same length and uses the same characters, we check if that word is a real english word. If it is not a real english word then we know the response is invalid.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# We can use the nltk library to check if a word is a real english word.\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#import nltk\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#nltk.download('words')\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#from nltk.corpus import words\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01menchant\u001b[39;00m \n\u001b[1;32m      7\u001b[0m words \u001b[38;5;241m=\u001b[39m enchant\u001b[38;5;241m.\u001b[39mDict(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124men_US\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m valid_words \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(words\u001b[38;5;241m.\u001b[39mwords()) \u001b[38;5;66;03m#make a var with all the valid words\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/enchant/__init__.py:81\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[1;32m     80\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 81\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01menchant\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _enchant \u001b[38;5;28;01mas\u001b[39;00m _e\n\u001b[1;32m     82\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n\u001b[1;32m     83\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39menviron\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPYENCHANT_IGNORE_MISSING_LIB\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/enchant/_enchant.py:157\u001b[0m\n\u001b[1;32m    149\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m enchant_lib_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    150\u001b[0m     msg \u001b[38;5;241m=\u001b[39m textwrap\u001b[38;5;241m.\u001b[39mdedent(\n\u001b[1;32m    151\u001b[0m \u001b[38;5;250m        \u001b[39m\u001b[38;5;124;03m\"\"\"\\\u001b[39;00m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;124;03m        The 'enchant' C library was not found and maybe needs to be installed.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    155\u001b[0m \u001b[38;5;124;03m        \"\"\"\u001b[39;00m\n\u001b[1;32m    156\u001b[0m     )\n\u001b[0;32m--> 157\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(msg)\n\u001b[1;32m    160\u001b[0m find_message(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mloading library \u001b[39m\u001b[38;5;124m\"\u001b[39m, enchant_lib_path)\n\u001b[1;32m    161\u001b[0m e \u001b[38;5;241m=\u001b[39m ctypes\u001b[38;5;241m.\u001b[39mcdll\u001b[38;5;241m.\u001b[39mLoadLibrary(enchant_lib_path)\n",
-      "\u001b[0;31mImportError\u001b[0m: The 'enchant' C library was not found and maybe needs to be installed.\nSee  https://pyenchant.github.io/pyenchant/install.html\nfor details\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#3. Finally, if the response is the same length and uses the same characters, we check if that word is a real english word. If it is not a real english word then we know the response is invalid.\n",
     "# We can use the nltk library to check if a word is a real english word.\n",
     "#import nltk\n",
     "#nltk.download('words')\n",
     "#from nltk.corpus import words\n",
-    "import enchant \n",
-    "words = enchant.Dict(\"en_US\")\n",
+    "import json\n",
+    "with open('words_dictionary.json') as f:\n",
+    "    valid_words = json.load(f)\n",
     "\n",
-    "valid_words = set(words.words()) #make a var with all the valid words\n",
     "# We can now use the valid_words set to check if a response is a valid english word\n",
     "def validate_response_word(row):\n",
     "    return row.apply(lambda x: x if isinstance(x, str) and x in valid_words else '')\n",
@@ -276,11 +262,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "word_to_check = \"carpet\"\n",
+    "word_to_check = \"women\"\n",
     "is_valid = word_to_check in valid_words\n",
     "print(is_valid)  # This will print True if the word is valid, otherwise False"
    ]
@@ -295,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
