Added some qc and started trying to make a bar plot of the anagram max rts 	new file:   anag_stats_/Data review/anagram_statistics20240819_1557.csv 	new file:   anag_stats_/Data review/preliminary_qc copy.ipynb 	modified:   anag_stats_/Data review/preliminary_qc.ipynb 	modified:   anag_stats_/Data review/subject_wise_qc.ipynb 	new file:   bar1.png

--- a/anag_stats_/Data review/preliminary_qc.ipynb
+++ b/anag_stats_/Data review/preliminary_qc.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,12 @@
     "# Add to the df next to the id column\n",
     "cols = anagram_stat.columns.tolist()\n",
     "cols.insert(id_index + 1, cols.pop(cols.index('valid_ratio')))\n",
-    "anagram_stat = anagram_stat[cols]\n"
+    "anagram_stat = anagram_stat[cols]\n",
+    "\n",
+    "# add to the df next to the id column the \"corect\" column\n",
+    "cols = anagram_stat.columns.tolist()\n",
+    "cols.insert(id_index + 1, cols.pop(cols.index('correct')))\n",
+    "anagram_stat = anagram_stat[cols]"
    ]
   },
   {
@@ -318,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
